--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,15 +75,23 @@ nav:
         - MkDocs: contributing/mkdocs.md
     - HPC Basics:
         - hpc_basics/index.md
+        - Shell Scripting: hpc_basics/shell_scripting.md
+        - Slurm: hpc_basics/slurm.md
+        - Hypatia: hpc_basics/hypatia.md
+        - Archer2: hpc_basics/archer2.md
+        - JASMIN: hpc_basics/jasmin.md
     - Climate Models:
         - climate_models/index.md
-        - Isca: climate_models/isca.md
+        - Isca:
+            - climate_models/isca/index.md
         - CESM:
             - climate_models/cesm/index.md
     - Data:
         - data/index.md
         - ERA5:
             - data/era5/index.md
+        - CESM:
+            - data/cesm/index.md
         - CMIP:
             - data/cmip/index.md
             - CEDA/ESGF: data/cmip/CEDAESGF_Wrapper.ipynb  # takes title from first #H1 heading
